# llm-server

./: .gitignore  README.md  logconfig.yaml  pyproject.toml
src/llm_server/: main.py  simple_agent.py  whisper.py
tests/: test_llm_server.py
