[tool.poetry]
name = "llm-server"
version = "0.1.0"
description = ""
authors = ["ktechb <k_techevo@yahoo.co.jp>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.90.0"
uvicorn = "^0.20.0"
gunicorn = "^20.1.0"
langchain = "^0.0.81"
openai = "^0.26.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^1.0.0"
black = "^23.1.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
